--- a/index.html
+++ b/index.html
@@ -4,36 +4,85 @@
   <meta charset="UTF-8">
   <title>技能五子棋</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    .start-menu {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0, 0, 0, 0.7);
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 999;
+    }
+    .start-menu h2 { margin: 10px 0; }
+    .start-menu label { display: block; margin-bottom: 8px; }
+    .start-menu button {
+      margin-top: 15px;
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    .dialog-box {
+      margin: 10px auto;
+      padding: 10px;
+      border: 1px solid #aaa;
+      background: #fffae3;
+      width: 80%;
+      text-align: center;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-  <div class="game-container">
+  <div id="start-menu" class="start-menu">
+    <h2>选择对战模式</h2>
+    <label><input type="radio" name="play-mode" value="pvp" checked> 玩家 vs 玩家</label>
+    <label><input type="radio" name="play-mode" value="pve"> 玩家 vs AI</label>
 
-    <!-- 玩家信息 -->
-    <div class="player-info">
-      <div class="player" id="player1">
-        <img src="https://via.placeholder.com/60" alt="玩家1头像">
-        <div class="player-name">玩家1</div>
-      </div>
-      <div class="player" id="player2">
-        <img src="https://via.placeholder.com/60" alt="玩家2头像">
-        <div class="player-name">玩家2</div>
-      </div>
-    </div>
+    <h2>选择技能玩法</h2>
+    <label><input type="radio" name="skill-mode" value="free" checked> 自由选技能</label>
+    <label><input type="radio" name="skill-mode" value="random"> 抽卡模式</label>
 
-    <!-- 搞笑对白 -->
-    <div class="dialog-box" id="dialog-box">搞笑对白区域</div>
-
-    <!-- 棋盘 -->
-    <canvas id="board" width="600" height="600"></canvas>
-
-    <!-- 技能区 -->
-    <div class="skills-container">
-      <div id="skill-pool">技能池（抽取后显示）</div>
-      <button id="draw-skill">🎲 抽取技能</button>
-    </div>
-
+    <button onclick="startGame()">开始游戏</button>
   </div>
 
-  <script src="main.js"></script>
+  <div class="game-container" style="display:none">
+    <canvas id="board" width="600" height="600"></canvas>
+    <div class="dialog-box" id="dialog-box"></div>
+    <div id="skill-area"></div>
+  </div>
+
+  <script>
+    let playMode = "pvp";
+    let skillMode = "free";
+
+    function startGame() {
+      playMode = document.querySelector('input[name="play-mode"]:checked').value;
+      skillMode = document.querySelector('input[name="skill-mode"]:checked').value;
+      document.getElementById('start-menu').style.display = 'none';
+      document.querySelector('.game-container').style.display = 'block';
+      initBoard();
+      initSkillUI();
+    }
+
+    // DEMO: 飞沙走石技能
+    function executeSkill_feishazoushi(opponentLastMove) {
+      if (!opponentLastMove) return;
+      const { x, y } = opponentLastMove;
+      const cellSize = 600 / 15;
+      const canvas = document.getElementById('board');
+      const ctx = canvas.getContext('2d');
+      ctx.clearRect(x * cellSize + 1, y * cellSize + 1, cellSize - 2, cellSize - 2);
+      board[y][x] = 0;
+      showDialog("飞沙走石！对方的棋子飞出去了！");
+    }
+
+    function showDialog(text) {
+      document.getElementById('dialog-box').innerText = text;
+    }
+  </script>
 </body>
 </html>
