--- a/index.html
+++ b/index.html
@@ -34,6 +34,19 @@
       text-align: center;
       font-weight: bold;
     }
+    .skill-button {
+      margin: 5px;
+      padding: 6px 12px;
+      border: none;
+      border-radius: 4px;
+      background: #cce5ff;
+      cursor: pointer;
+    }
+    .skill-button:disabled {
+      background: #eee;
+      color: #999;
+      cursor: not-allowed;
+    }
   </style>
 </head>
 <body>
