--- a/index.html
+++ b/index.html
@@ -25,17 +25,38 @@
       font-size: 16px;
       cursor: pointer;
     }
+    .dialog-wrapper {
+      display: flex;
+      justify-content: space-between;
+      padding: 10px 30px;
+      width: 100%;
+    }
     .dialog-box {
-      margin: 10px auto;
+      width: 40%;
       padding: 10px;
       border: 1px solid #aaa;
-      background: #fffae3;
-      width: 80%;
-      text-align: center;
       font-weight: bold;
+      background-color: #fefefe;
+    }
+    .dialog-box.left {
+      background-color: #eaffea;
+    }
+    .dialog-box.right {
+      background-color: #fff4e8;
+      text-align: right;
+    }
+    #skill-panels {
+      display: flex;
+      justify-content: space-between;
+      padding: 10px 20px;
+    }
+    .skill-side {
+      width: 45%;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 6px;
     }
     .skill-button {
-      margin: 5px;
       padding: 6px 12px;
       border: none;
       border-radius: 4px;
@@ -64,8 +85,16 @@
 
   <div class="game-container" style="display:none">
     <canvas id="board" width="600" height="600"></canvas>
-    <div class="dialog-box" id="dialog-box"></div>
-    <div id="skill-area"></div>
+
+    <div class="dialog-wrapper">
+      <div id="dialog-player1" class="dialog-box left"></div>
+      <div id="dialog-player2" class="dialog-box right"></div>
+    </div>
+
+    <div id="skill-panels">
+      <div id="player1-skill-area" class="skill-side left"></div>
+      <div id="player2-skill-area" class="skill-side right"></div>
+    </div>
   </div>
 
   <script src="skills.js"></script>
