Add turn indicator and dialog wrapper elements
Added turn indicator and dialog wrapper to HTML.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
     }
     .dialog-box.right {
       background-color: #fff4e8;
-      text-align: right;
     }
     #skill-panels {
       display: flex;
@@ -95,6 +94,13 @@
       <div id="player1-skill-area" class="skill-side left"></div>
       <div id="player2-skill-area" class="skill-side right"></div>
     </div>
+  </div>
+
+  <div id="turn-indicator" style="text-align:center;font-weight:bold;font-size:18px;padding:6px 0;"></div>
+
+  <div class="dialog-wrapper">
+    <div id="dialog-player1" class="dialog-box left"></div>
+    <div id="dialog-player2" class="dialog-box right"></div>
   </div>
 
   <script src="skills.js"></script>
