--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>技能五子棋</title>
-  <link rel="stylesheet" href="style.css">
+  <!-- 全局样式 -->
+  <link rel="stylesheet" href="style.css" />
+
+  <!-- 仅保留开始菜单遮罩的最小内联样式（其余布局都在 style.css 里） -->
   <style>
     .start-menu {
       position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
+      inset: 0;
       background-color: rgba(0, 0, 0, 0.7);
       color: #fff;
       display: flex;
@@ -16,74 +19,37 @@
       align-items: center;
       justify-content: center;
       z-index: 999;
+      padding: 16px;
+      text-align: left;
     }
-    .start-menu h2 { margin: 10px 0; }
+    .start-menu h2 { margin: 8px 0 6px; }
     .start-menu label { display: block; margin-bottom: 8px; }
+    .start-menu .actions {
+      display:flex; gap:10px; flex-wrap:wrap; margin-top:12px;
+    }
     .start-menu button {
-      margin-top: 15px;
-      padding: 10px 20px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-    .dialog-wrapper {
-      display: flex;
-      justify-content: space-between;
-      padding: 10px 30px;
-      width: 100%;
-    }
-    .dialog-box {
-      width: 40%;
-      padding: 10px;
-      border: 1px solid #aaa;
-      font-weight: bold;
-      background-color: #fefefe;
-    }
-    .dialog-box.left {
-      background-color: #eaffea;
-    }
-    .dialog-box.right {
-      background-color: #fff4e8;
-    }
-    #skill-panels {
-      display: flex;
-      justify-content: space-between;
-      padding: 10px 20px;
-    }
-    .skill-side {
-      width: 45%;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 6px;
-    }
-    .skill-button {
-      padding: 6px 12px;
-      border: none;
-      border-radius: 4px;
-      background: #cce5ff;
-      cursor: pointer;
-    }
-    .skill-button:disabled {
-      background: #eee;
-      color: #999;
-      cursor: not-allowed;
+      padding: 10px 14px; font-size: 14px; border-radius:10px; border:1px solid #bbb;
+      background:#fff; color:#222; cursor:pointer;
     }
   </style>
 </head>
 <body>
+  <!-- 开始菜单（遮罩） -->
   <div id="start-menu" class="start-menu">
-        
     <h2>选择对战模式</h2>
     <label><input type="radio" name="play-mode" value="pvp" checked> 玩家 vs 玩家</label>
     <label><input type="radio" name="play-mode" value="pve"> 玩家 vs AI</label>
-    
-    <!-- 在开始按钮周围，新增一个说明页按钮（新标签页打开） -->
-    <div style="display:flex; gap:10px; flex-wrap:wrap; margin-top:12px;">
+
+    <!-- 如需“玩法选择（自由选/随机抽）”可在下方继续加一组单选 -->
+
+    <div class="actions">
       <button onclick="startGame()">开始游戏</button>
+      <!-- 新标签打开规则页 -->
       <a href="rules.html" target="_blank" rel="noopener" class="link-button">技能规则说明</a>
     </div>
-
   </div>
 
+  <!-- 游戏主容器：左右两列技能池 + 中间棋盘 -->
   <div class="game-container">
     <!-- 左列：玩家1 -->
     <div class="skill-column left">
@@ -91,7 +57,7 @@
       <div id="player1-skill-area" class="skill-area"></div>
     </div>
 
-    <!-- 中间：棋盘 -->
+    <!-- 中间：棋盘与回合指示 -->
     <div class="board-wrap">
       <div id="turn-indicator"></div>
       <canvas id="board" width="600" height="600"></canvas>
@@ -104,7 +70,9 @@
     </div>
   </div>
 
+  <!-- 脚本顺序保持不变；若你已添加 ai.js，可在 main.js 之后再引入 -->
   <script src="skills.js"></script>
   <script src="main.js"></script>
+  <!-- <script src="ai.js"></script> -->
 </body>
 </html>
