Update script comments and include ai.js

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
     </div>
   </div>
 
-  <!-- 脚本顺序保持不变；若你已添加 ai.js，可在 main.js 之后再引入 -->
+  <!-- 脚本顺序保持不变；已添加 ai.js，在 main.js 之后再引入 -->
   <script src="skills.js"></script>
   <script src="main.js"></script>
-  <!-- <script src="ai.js"></script> -->
+  <script src="ai.js"></script>
 </body>
 </html>
