Add AI difficulty options and game experience tips
Added AI difficulty selection and game experience tips.

--- a/index.html
+++ b/index.html
@@ -42,9 +42,19 @@
 
     <!-- 如需“玩法选择（自由选/随机抽）”可在下方继续加一组单选 -->
 
-    <div class="actions">
+    <h2 style="margin-top:10px;">AI 难度</h2>
+    <select id="ai-difficulty">
+      <option value="EASY">简单</option>
+      <option value="NORMAL" selected>普通</option>
+      <option value="HARD">困难</option>
+    </select>
+
+    <p style="margin-top:10px;opacity:.9">
+      （为保持最佳游戏体验，建议把手机横屏，并隐藏工具栏）
+    </p>
+
+    <div class="actions" style="margin-top:12px;">
       <button onclick="startGame()">开始游戏</button>
-      <!-- 新标签打开规则页 -->
       <a href="rules.html" target="_blank" rel="noopener" class="link-button">技能规则说明</a>
     </div>
   </div>
