--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
       <div class="dialog" id="dialog-player2"></div>
       <div id="player2-skill-area" class="skill-area"></div>
     </div>
+
+    <!-- 控制按钮区域 -->
+    <div id="control-bar" style="margin-top: 8px; text-align: center;">
+      <button id="btn-restart">再来一局</button>
+      <button id="btn-back-home" style="margin-left: 12px;">返回首页</button>
+    </div>
   </div>
 
   <!-- 脚本顺序保持不变；已添加 ai.js，在 main.js 之后再引入 -->
