--- a/rules.html
+++ b/rules.html
@@ -159,6 +159,62 @@
       </ul>
     </div>
 
+ <div class="card">
+  <h2>🧘 解压模式说明</h2>
+  <div class="row">
+    <span class="pill">不判胜负</span>
+    <span class="pill">更偏娱乐</span>
+    <span class="pill">技能更自由</span>
+  </div>
+  <ul>
+    <li>解压模式中<strong>不再以连五判胜负</strong>，你可以安心玩技能、胡闹和制造戏剧场面。</li>
+    <li>对局只在以下情况下结束：
+      <ul>
+        <li><strong>提前结算</strong>：玩家主动选择结束本局；</li>
+        <li><strong>棋盘下满</strong>：所有格子被填满后自动结算。</li>
+      </ul>
+    </li>
+
+    <li><strong>技能规则的特殊变化：</strong></li>
+    <ul>
+      <li><strong>力拔山兮 → 爆炸洗牌版</strong>  
+        触发后会炸飞若干棋子，制造混乱与戏剧效果，不再直接判胜。</li>
+
+      <li><strong>飞沙走石 / 静如止水</strong>  
+        不再是一次性技能，而是进入冷却：使用后需等待 <strong>2 回合</strong> 才能再次发动。</li>
+
+      <li><strong>两极反转</strong>  
+        成为可主动使用的大招，每次使用后进入 <strong>5 回合冷却</strong>。  
+        效果：双方棋子阵营立刻互换（黑 ↔ 白），技能状态不会互换。</li>
+
+      <li><strong>棒球</strong>  
+        仅在解压模式开放的娱乐技能：
+        <ul>
+          <li>操作力度条，命中“完美区间”可触发“本垒打！”</li>
+          <li>随机打飞棋盘上一颗棋子，带来不可预期的变局。</li>
+        </ul>
+      </li>
+    </ul>
+
+    <li><strong>AI 解压行为：</strong>
+      <ul>
+        <li>会像普通技能一样主动使用两极反转与棒球。</li>
+        <li>当 AI 触发两极反转时，有概率说出“黑历史台词”（彩蛋）：
+          <span class="ex">例如：揭开黑历史：吧啦吧啦…</span></li>
+      </ul>
+    </li>
+  </ul>
+
+  <details>
+    <summary>解压模式的设计理念</summary>
+    <ul>
+      <li>让玩家从“胜负压力”中解放，专注技能组合和戏剧场面。</li>
+      <li>技能可以很严肃，但棋盘也可以只为快乐存在。</li>
+      <li>推荐在心情疲惫或只想轻松玩耍时使用。</li>
+    </ul>
+  </details>
+</div>
+
     <div class="card">
       <h2>AI 行为（普通难度默认）</h2>
       <ul>
